working fine everything

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <body>
         <header class="navbar-container">
             <nav class="navbar">
-                <!-- Logo -->
                 <div class="logo">
                     <a href="/"><span>Arbaz Ansari</span></a>
                 </div>
@@ -31,13 +30,13 @@
 
                 <!-- Social Media Icons -->
                 <div class="social-icons">
-                    <a href="#"
+                    <a href="https://www.linkedin.com/in/erarbazansari/" target="_blank"
                         ><img
                             class="fab fa-linkedin"
                             src="../images/socialMedia/linkedin.png"
                             alt="linkedin profile"
                     /></a>
-                    <a href="#"
+                    <a href="https://github.com/erarbazansari" target="_blank"
                         ><img
                             src="../images/socialMedia/github.png"
                             alt="github profile"
@@ -46,9 +45,8 @@
             </nav>
         </header>
         <main>
-            <section class="hero-section">
+            <section id="hero-section">
                 <div class="hero-container">
-                    <!-- Text Section -->
                     <div class="hero-text">
                         <p class="intro-text">
                             Hi! I'm <span>Arbaz Ansari</span>
@@ -61,7 +59,7 @@
                             efficient and scalable solutions that bridge
                             creativity with functionality.
                         </p>
-                        <button class="view-btn">View Resume</button>
+                        <a href="https://drive.google.com/file/d/1c8a84JlVrPf5qYNZaIps2UqRv7yUncn6/view?usp=sharing" target="_blank"><button class="view-btn">View Resume</button></a>
                     </div>
 
                     <!-- Image Section -->
@@ -74,7 +72,7 @@
                 </div>
             </section>
 
-            <section class="skills">
+            <section id="skills">
                 <div class="skills-content">
                     <h2>Skills</h2>
                     <div class="my-skills">
@@ -127,7 +125,7 @@
                 </div>
             </section>
 
-            <section class="projects">
+            <section id="projects">
                 <h2>Recent Projects</h2>
                 <div class="project-cards">
                     <!-- Card 1 -->
@@ -296,7 +294,7 @@
                 </div>
             </section>
 
-            <section class="contact">
+            <section id="contact">
                 <div class="contact_us_2">
                     <h2 class="contactus-head">Contact Us</h2>
                     <p class="contactus-subhead">
