--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header class="navbar-container">
             <nav class="navbar">
-                <div class="logo" data-aos="fade">
+                <div class="logo">
                     <a href="/"><span>Arbaz Ansari</span></a>
                 </div>
 
@@ -57,9 +57,9 @@
                 <div class="hero-container">
                     <div class="hero-text">
                         <p class="intro-text">
-                            Hi! I'm <span data-aos="fade">Arbaz Ansari</span>
+                            Hi! I'm <span>Arbaz Ansari</span>
                         </p>
-                        <h1 class="hero-title" data-aos="fade">
+                        <h1 class="hero-title">
                             Software Developer
                         </h1>
                         <p class="hero-description">
