--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
                         <p class="intro-text">
                             Hi! I'm <span>Arbaz Ansari</span>
                         </p>
-                        <h1 class="hero-title">
-                            Software Developer
-                        </h1>
+                        <h1 class="hero-title">Software Developer</h1>
                         <p class="hero-description">
                             A passionate coder, problem-solver, and tech
                             enthusiast. As a final-year Computer Science student
@@ -359,6 +357,7 @@
                                     class="input"
                                     placeholder="Your Name"
                                     required
+                                    autocomplete="off"
                                 />
                             </div>
                             <div class="form-group">
@@ -371,6 +370,7 @@
                                     class="input"
                                     placeholder="Your Email"
                                     required
+                                    autocomplete="off"
                                 />
                             </div>
                             <div class="form-group">
