profile pic compressed

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         data-aos="bounce"
                     >
                         <img
-                            src="../images/myImages/1.png"
+                            src="../images/myImages/1.webp"
                             alt="Arbaz Ansari"
                         />
                     </div>
