minor ui changes improved version, addition of new button in project section -> veiw more

--- a/index.html
+++ b/index.html
@@ -337,6 +337,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="more-projects" data-aos="fade-up">
+                    <a href="https://github.com/ErArbazAnsari?tab=repositories"
+                    target="_blank"
+                        ><button>View More</button></a
+                    >
+                </div>
             </section>
 
             <section id="contact">
