--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <!-- Navigation Links -->
                 <ul class="nav-links" id="nav-links">
-                    <li><a href="/">About</a></li>
+                    <li><a href="#hero-section">About</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -338,8 +338,9 @@
                     </div>
                 </div>
                 <div class="more-projects" data-aos="fade-up">
-                    <a href="https://github.com/ErArbazAnsari?tab=repositories"
-                    target="_blank"
+                    <a
+                        href="https://github.com/ErArbazAnsari?tab=repositories"
+                        target="_blank"
                         ><button>View More</button></a
                     >
                 </div>
@@ -403,7 +404,7 @@
                 <div class="footer-section links">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="/">About</a></li>
+                        <li><a href="#hero-section">About</a></li>
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
