--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <!-- Social Media Icons -->
 
-                <div class="social-icons" data-aos="fade">
+                <div class="social-icons">
                     <a
                         href="https://www.linkedin.com/in/erarbazansari/"
                         target="_blank"
