--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
             <section id="skills">
                 <div class="skills-content">
-                    <h2 data-aos="fade">Skills</h2>
-                    <div class="my-skills" data-aos="fade">
+                    <h2>Skills</h2>
+                    <div class="my-skills">
                         <div
                             class="card"
                             data-aos="fade-up"
