--- a/index.html
+++ b/index.html
@@ -96,11 +96,7 @@
                 <div class="skills-content">
                     <h2>Skills</h2>
                     <div class="my-skills">
-                        <div
-                            class="card"
-                            data-aos="fade-up"
-                            data-aos-delay="50"
-                        >
+                        <div class="card" data-aos="fade-up">
                             <img
                                 src="./images/skills/frontend.png"
                                 alt="Frontend"
@@ -116,11 +112,7 @@
                                 <li>NextJs</li>
                             </ul>
                         </div>
-                        <div
-                            class="card"
-                            data-aos="fade-up"
-                            data-aos-delay="100"
-                        >
+                        <div class="card" data-aos="fade-up">
                             <img
                                 src="./images/skills/backend.png"
                                 alt="Backend"
@@ -135,11 +127,7 @@
                                 <li>Flask</li>
                             </ul>
                         </div>
-                        <div
-                            class="card"
-                            data-aos="fade-up"
-                            data-aos-delay="150"
-                        >
+                        <div class="card" data-aos="fade-up">
                             <img
                                 src="./images/skills/database-storage.png"
                                 alt="Databases"
