--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Arbaz Ansari Portfolio</title>
         <link rel="stylesheet" href="./style.css" />
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <link rel="shortcut icon" href="./images/myImages/1.webp" type="image/x-icon">
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
             AOS.init();
